--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debathena-xcluster (10.0.0-1) unstable; urgency=low
+debathena-xcluster (10.0.0-0debathena1) unstable; urgency=low
 
   * Merged quilt patches into mainline Athena tree
 
