--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,14 @@
-debathena-xcluster (10.0.0-0debathena3) UNRELEASED; urgency=low
+debathena-xcluster (10.0.1-0debathena1) UNRELEASED; urgency=low
 
+  [ Jonathan Reed ]
   * Bump debian/compat to 6
   * Switch from control.in to control (Trac: #561)
   * Bump Standards-Version to 3.9.3
   * Bump compat level to 7
+
+  [ Victor Vasiliev ]
+  * Make package build without daconfiscate
+  * Use debhelper 7
 
  -- Jonathan Reed <jdreed@mit.edu>  Wed, 03 Apr 2013 13:59:58 -0400
 
