--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debathena-xcluster (10.0.1-0debathena1) UNRELEASED; urgency=low
+debathena-xcluster (10.0.1-0debathena1) unstable; urgency=low
 
   [ Jonathan Reed ]
   * Bump debian/compat to 6
@@ -9,8 +9,10 @@ debathena-xcluster (10.0.1-0debathena1) UNRELEASED; urgency=low
   [ Victor Vasiliev ]
   * Make package build without daconfiscate
   * Use debhelper 7
+  * Add git-buildpackage configuration
+  * Set source format to 3.0 (quilt)
 
- -- Jonathan Reed <jdreed@mit.edu>  Wed, 03 Apr 2013 13:59:58 -0400
+ -- Victor Vasiliev <vasilvv@mit.edu>  Sun, 29 Sep 2013 20:24:10 -0400
 
 debathena-xcluster (10.0.0-0debathena2) unstable; urgency=low
 
