--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debathena-xcluster (10.1.1-0debathena1) unstable; urgency=medium
+
+  * Add upstream VERSION file.
+
+ -- Victor Vasiliev <vasilvv@mit.edu>  Wed, 02 Dec 2015 01:44:11 -0500
+
 debathena-xcluster (10.1.0-0debathena1) unstable; urgency=medium
 
   * Replace old C-based version with shell and netcat.
